<resources>
    <string name="app_name">KotlinWeatherApp</string>
    <string name="temperature_label">Temperature: %s%s</string>
    <string name="feels_like_label">Feels like: %s%s</string>
    <string name="city_coordinates">lt/ln: %s, %s</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="week_day_temperature">Day: %s</string>
    <string name="week_night_temperature">Night: %s</string>
    <string name="FAB_description">Russian Cities / World Capitals Switcher</string>
    <string name="Unknown_Error">Unknown Error</string>
    <string name="threads">Threads</string>
    <string name="in_main_thread">В главном потоке</string>
    <string name="from_thread">Из потока %d</string>
    <string name="in_thread">Выводим в потоке %s</string>
    <string name="calculate_in_thread">Считаем в потоке %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="calculate">Расчет</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Расчет в потоке</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>
    <string name="menu_title_history">History</string>
    <string name="c_or_f">Display temperature in Celsius</string>
    <string name="settings">Settings</string>
    <string name="save_note">Save</string>
    <string name="delete_note">Delete</string>
    <string name="close_note">Close</string>
    <string name="contacts">Contacts</string>
    <string name="authorities">wololo.provider</string>
    <string name="filter">Filter</string>
    <string name="call">Call</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_title_no_gps">No GPS access</string>
    <string name="dialog_message_no_gps">Please allow GPS access if current location\'s weather is required</string>
    <string name="dialog_title_gps_turned_off">GPS is turned off</string>
    <string name="dialog_message_last_location_unknown">Location unknown.
Please turn on the GPS for current location\'s weather</string>
    <string name="dialog_message_last_known_location">Showing last known location.
        Please turn on the GPS to show current location</string>
    <string name="dialog_rationale_title">Geolocation access</string>
    <string name="dialog_rationale_message">Information</string>
    <string name="dialog_rationale_give_access">Grant access</string>
    <string name="dialog_rationale_decline">Deny</string>
    <string name="dialog_address_title">Your address</string>
    <string name="dialog_address_get_weather">Get weather</string>
    <string name="geolocation_weather">Geolocation Weather</string>
    <string name="city_note">City Note</string>
    <string name="search_city">Search City</string>
    <string name="webview_ok">OK</string>
    <string name="settings_item">Settings</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="google_maps">Google Maps</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="place_car">Place Car</string>
    <string name="driveCar">Drive</string>
    <string name="stopCar">Stop</string>
</resources>