<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_title_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_content_provider"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/contacts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_google_maps"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/google_maps"
        app:showAsAction="always" />

</menu>