<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/city_note_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/city_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5_dp"
            android:layout_weight="1"
            android:text="@string/save_note" />

        <Button
            android:id="@+id/delete_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5_dp"
            android:layout_weight="1"
            android:text="@string/delete_note" />

        <Button
            android:id="@+id/close_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5_dp"
            android:layout_weight="1"
            android:text="@string/close_note" />
    </LinearLayout>

</LinearLayout>